tests/fixtures/__snapshots__/build-test-systems.log.logstrip.snap
> Task :app:compileJava
/app/src/main/java/com/example/App.java:15: error: cannot find symbol
        System.out.println(undefinedVariable);
                           ^
  symbol:   variable undefinedVariable
  location: class App
1 error
> Task :app:compileJava FAILED
FAILURE: Build failed with an exception.
   Compiling serde v1.0.197
   Compiling reqwest v0.11.24
error[E0425]: cannot assign twice to immutable variable `x`
  --> src/main.rs:10:5
   |
   |         help: consider making this binding mutable: `mut x`
10 |     x = 6;
   |     ^^^^^ cannot assign twice to immutable variable
error: could not compile `my_project` due to previous error
=== RUN   TestProcessOrder
panic: runtime error: index out of range [1] with length 1 [recovered]
        panic: runtime error: index out of range [1] with length 1
goroutine 18 [running]:
testing.tRunner.func1.2({0x102f3a0, 0x1065b90})
        /usr/local/go/src/testing/testing.go:1526 +0x24e
panic({0x102f3a0, 0x1065b90})
[... hidden internal library frames ...]
